[package]
name = "pg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "compression-br", "compression-deflate", "compression-gzip", "cors", "timeout", "decompression-br", "decompression-deflate", "decompression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"

bb8 = "0.7.1"
bb8-postgres = "0.7.0"
postgres-protocol = "0.6"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"]}
